base/logging-system/03-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  namespace: logging-system
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
  type: ClusterIP
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: inter-node
