base/logging-system/03b-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: logging-system
  labels:
    app: elasticsearch
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
    - host: elasticsearch.shortrib.run
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: elasticsearch
                port:
                  number: 9200
