base/logging-system/05-kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: logging-system
  labels:
    app: kibana
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
    - host: logs.shortrib.run
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kibana
                port:
                  number: 5601
